--- a/config/keys.env
+++ b/config/keys.env
@@ -1,1 +1,1 @@
-SEND_GRID_API_KEY = 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
+SEND_GRID_API_KEY = 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
